--- a/style.css
+++ b/style.css
@@ -7,6 +7,20 @@ body {
     color: white;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+input:focus {
+    outline: 2px solid white;
+}
+
 header {
     display: flex;
     flex-direction: column;
@@ -43,6 +57,15 @@ header > p {
     display: flex;
     justify-content: center;
     gap: 60px;
+}
+
+.gradeInput {
+    background-color: rgb(39, 39, 39);
+    color: white;
+    border: 2px solid white;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .grade {
