--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+.input {
+    background-color: rgb(39, 39, 39);
+    color: white;
+    border: 2px solid white;
+}
+
 input[type=number] {
     -moz-appearance: textfield;
 }
@@ -38,7 +44,7 @@ header > p {
     gap: 30px;
 }
 
-#updateGradesBtn {
+.btn {
     background-color: white;
     border: 2px solid rgb(39, 39, 39);
     border-radius: 15px;
@@ -47,7 +53,7 @@ header > p {
     font-size: 20px;
 }
 
-#updateGradesBtn:hover {
+.btn:hover {
     background-color: rgb(39, 39, 39);
     color: white;
     border: 2px solid white;
@@ -60,9 +66,6 @@ header > p {
 }
 
 .gradeInput {
-    background-color: rgb(39, 39, 39);
-    color: white;
-    border: 2px solid white;
     border-radius: 10px;
     text-align: center;
     font-size: 20px;
@@ -75,4 +78,72 @@ header > p {
     gap: 10px;
     font-weight: bold;
     font-size: 24px;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, clamp(33%, 300px, 1fr));
+    align-items: center;
+}
+
+.classname {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    border: 2px solid white;
+    border-radius: 20px;
+    padding: 20px;
+    width: 400px;
+}
+
+.section-header {
+    display: flex;
+    gap: 30px;
+}
+
+.addAssignmentBtn {
+    background-color: white;
+    border: 2px solid rgb(39, 39, 39);
+    height: 25px;
+    width: 25px;
+    border-radius: 25px;
+    border: 2px solid white;
+    text-align: center;
+    margin: auto;
+}
+
+.addAssignmentBtn:hover {
+    background-color: rgb(39, 39, 39);
+    color: white;
+    border: 2px solid white;
+}
+
+.assignments {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.assignments > div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.assignment-name {
+    border-radius: 8px;
+    text-align: left;
+    height: auto;
+    width: 150px;
+}
+
+.assignment-input {
+    font-size: 15px;
+    text-align: center;
+    border-radius: 8px;
+    height: auto;
+    width: 40px;
+}
+
+h1, h2 {
+    margin: 0;
 }
